--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -73,7 +73,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Tanvi Naik</a>.
+      Coded by <a href="https://github.com/TanvNaik">Tanvi Naik</a>.
     </p>
   </footer>
   <script src="/js/script.js"
