--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -76,6 +76,6 @@
       Coded by <a href="https://github.com/TanvNaik">Tanvi Naik</a>.
     </p>
   </footer>
-  <script src="/js/script.js"
+  <script src="/js/script.js"></script>
 </body>
 </html>
