--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -59,7 +59,7 @@
 
         <div>
           <label for="submit">
-            <input type="submit" class="submit" name="submit" value="CLAIM YOUR FREE TRAIL">
+            <input type="submit" class="submit" id="submit" name="submit" value="CLAIM YOUR FREE TRAIL">
           </label>
         </div>
 
